--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "lukun/structures",
-    "license": "proprietary",
+    "license": "MIT",
     "type": "library",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "authors": [
         {
             "name": "Lukáš Kún",
